operational/ECMWFlogs/25-02-2016_22:36:58.txt
  File "./getECMWF.py", line 29
    cfg_file = '/nfs/crypt/arena/users/model/setup/wpVerif2.cfg'
    ^
IndentationError: unexpected indent
